# cephalon_rust

./: .gitignore  CLAUDE.md  Cargo.toml  Justfile  README.md  config.env  dist.toml  flake.nix  rust-toolchain.toml
cli/: Cargo.toml
cli/src/: config.rs  main.rs
common/: Cargo.toml
core/: Cargo.toml
core/src/: config.rs  event.rs  geometry.rs  lib.rs  ocr.rs  relic_screen_parser.rs  reward_session.rs  state.rs
core/src/items/: item_identifiers.rs  items.rs  mod.rs  orders.rs  relics.rs
core/src/log_watcher/: mod.rs
core/tests/: reward_session.rs
daemon/: Cargo.toml
daemon/src/: config.rs  main.rs  relic_screen_parser.rs
daemon/src/items/: item_identifiers.rs
daemon/src/log_watcher/: mod.rs
docs/superpowers/plans/: 2026-07-09-relic-overlay.md
docs/superpowers/specs/: 2026-07-09-relic-overlay-design.md
migrations/: 20240813114718_items.sql  20240814182112_init.sql
models/: .gitignore
overlay/: Cargo.toml
overlay/src/: config.rs  main.rs
src/: config.rs  main.rs  ocr.rs  relic_screen_parser.rs  style.css
src/items/: items.rs  mod.rs  relics.rs
src/log_watcher/: mod.rs
wix/: main.wxs
