[package]
name = "cephalon_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
async-trait = "0.1.81"
async-watcher = "0.3.0"
config = "0.14"
ctreg = "1.0.2"
dirs = "5.0.1"
futures = "0.3"
http = "1.1.0"
image = "0.25.2"
reqwest = { version = "0.12", features = ["json"] }
reqwest-middleware = "0.3.3"
sea-query = {version = "0.31.0", features = ["derive"]}
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "migrate"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "fs"] }
xcap = "0.0.13"
