[package]
name = "cephalon_rust"
version = "0.2.0"
edition = "2021"
description = "ordis' more helpful brother"
repository = "https://github.com/cramt/cephalon_rust"
authors = ["cramt"]

[package.metadata.wix]
upgrade-guid = "E184F713-AF0A-4C28-BABC-2A3644AF8523"
path-guid = "53883E5E-DF81-4065-AEF0-4E4D5B0A764D"
license = false
eula = false

[dependencies]
anyhow = "1.0.86"
async-trait = "0.1.81"
async-watcher = "0.3.0"
config = "0.14"
ctreg = "1.0.2"
dirs = "5.0.1"
futures = "0.3"
http = "1.1.0"
image = "0.25.2"
reqwest = { version = "0.12", features = ["json"] }
reqwest-middleware = "0.3.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "fs"] }
xcap = "0.0.13"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.21.1"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell", "powershell", "msi"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
# Path that installers should place binaries in
install-path = "CARGO_HOME"
# Whether to install an updater program
install-updater = true
