[package]
name = "cephalon_rust_cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.103"
tokio = { version = "1", features = ["process", "macros", "rt-multi-thread", "sync", "fs"] }
cephalon_rust_core = { path = "../core" }
config = "0.15.25"
serde = { version = "1", features = ["derive"] }
tracing-subscriber = "0.3.23"
tracing = "0.1.44"
