[package]
name = "cephalon_rust_core"
version = "0.2.0"
edition = "2021"
description = "ordis' more helpful brother"
repository = "https://github.com/cramt/cephalon_rust"
authors = ["cramt"]

[dependencies]
anyhow = "1.0.86"
async-trait = "0.1.81"
chrono = {version = "0.4.38", features = ["serde"]}
ctreg = "1.0.2"
dirs = "5.0.1"
futures = "0.3"
http = "1.1.0"
image = "0.25.2"
memoize = "0.4.2"
reqwest = { version = "0.12", features = ["json"] }
reqwest-middleware = "0.3.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0.63"
tokio = { version = "1", features = ["process", "macros", "rt-multi-thread", "sync", "fs"] }
xcap = "0.0.13"
