[package]
name = "cephalon_rust_core"
version = "0.2.0"
edition = "2021"
description = "ordis' more helpful brother"
repository = "https://github.com/cramt/cephalon_rust"
authors = ["cramt"]

[dependencies]
anyhow = "1.0.103"
async-trait = "0.1.89"
chrono = {version = "0.4.45", features = ["serde"]}
ctreg = "1.0.3"
dirs = "6.0.0"
futures = "0.3"
http = "1.4.2"
image = "0.25.10"
memoize = "0.6.0"
ocrs = "0.12"
reqwest = { version = "0.13", features = ["json"] }
reqwest-middleware = "0.5.2"
rten = "0.24"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.18"
tokio = { version = "1", features = ["process", "macros", "rt-multi-thread", "sync", "fs"] }
tracing = "0.1.44"
xcap = "0.9.6"
