[package]
name = "cephalon_rust_daemon"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = {workspace = true}
serde_json = {workspace = true}
serde = {workspace = true}
reqwest = {workspace = true}
sqlx = {workspace = true}
futures = {workspace = true}
config = {workspace = true}
reqwest-middleware = {workspace = true}
async-trait = {workspace = true}
http = {workspace = true}
anyhow = {workspace = true}
sea-query = {workspace = true}
dirs = {workspace = true}
async-watcher = {workspace = true}
ctreg = "1.0.2"
image = "0.25.2"
