[package]
name = "cephalon_rust_overlay"
version = "0.1.0"
edition = "2021"

[dependencies]
freya = "=0.4.0-rc.24"
winit = { version = "0.30", features = ["wayland", "x11", "rwh_06"] }
display-info = "0.5"
cephalon_rust_core = { path = "../core" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
config = "0.15"
serde = { version = "1", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
